# poetry-licenses-lib

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  tox.ini
examples/: example1.py  example2.py
poetry_licenses_lib/: __init__.py  activate.py  cache.py  dependency.py  errors.py  legacy.py  licenses.py  packages.py
tests/: conftest.py  setup.py  test_activate.py  test_cache.py  test_dependency.py  test_legacy.py  test_packages.py
