[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "poetry-licenses-lib"
version = "0.0.0"
description = "Retrieve the software license list of Python packages installed in a poetry virtual environment."
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"
license = "MIT"
include = [ "poetry_licenses_lib/py.typed" ]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "<2.0.0"
pip-licenses-lib = "^0.5.0"
