[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "poetry-licenses-lib"
version = "0.0.0"
description = "Retrieve the software license list of Python packages installed in a poetry virtual environment."
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"
license = "MIT"
include = [ "poetry_licenses_lib/py.typed" ]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "<2.0.0"
pip-licenses-lib = "^0.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
pathlibutil = "^0.3.5"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
addopts = [
  "-s",
  "--color=yes",
  #   "--cov=poetry-licenses-lib",
  #   "--cov-report=term-missing:skip-covered",
  #   "--cov-report=xml",
]

[tool.coverage.report]
exclude_lines = [ "if TYPE_CHECKING:" ]

[tool.coverage.run]
omit = [ "tests/*", "**/errors.py" ]
