[build-system]
build-backend = "poetry.core.masonry.api"
requires = [ "poetry-core" ]

[tool.poetry]
name = "poetry-licenses-lib"
version = "0.0.0"
description = "Retrieve the software license list of Python packages installed in a poetry virtual environment."
authors = [ "Christoph Dörrer <d-chris@web.de>" ]
readme = "README.md"
license = "MIT"
include = [ "poetry_licenses_lib/py.typed" ]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "<2.0.0"
pip-licenses-lib = "^0.5.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pathlibutil = "^0.3.5"
pytest-mock = "^3.14.0"
pytest-cov = "^6.1.1"

[tool.poetry.group.dev.dependencies]
tox = "^4.25.0"

[tool.isort]
profile = "black"

[tool.flake8]
exclude = [ ".venv/**", "tests/**" ]
type-checking-force-future-annotation = true
type-checking-strict = true
max-line-length = 88
count = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
addopts = [ "--color=yes" ]

[tool.coverage.report]
exclude_lines = [ "^if TYPE_CHECKING:", "pragma: no cover$" ]
show_missing = true
precision = 2

[tool.coverage.run]
omit = [ "tests/*" ]
